fixed on small screen

--- a/react-pos/src/styles.css
+++ b/react-pos/src/styles.css
@@ -971,7 +971,7 @@ h1 {
 
 .accessibility-box {
     display: flex;
-    position: fixed;
+    position: absolute;
     align-items: flex-start;
     z-index: 1000;
     padding: 10px;
@@ -1068,4 +1068,13 @@ h1 {
     padding-right: 50px;
     margin-left: 36px;
     transition: background-color 0.3s;
+}
+
+@media (max-width: 1920px) {
+    .accessibility-box {
+        bottom: 0;
+        right: 0;
+        top: auto;
+        left: auto;
+    }
 }
